@@ -4,6 +4,7 @@
 - Added HttpServletResponse argument to WebContext constructors in order to be able to access to the
   response object from Processors.
 - Fixed URL parameter names not allowing brackets ([,],{,})
+- Fixed URL parameter names not being repeatable.
 - Added support for server-based URLs in non-servlet-based environments.
 - Added "setAdditionalDialects()" method to TemplateEngine for being able to specify the dialects
   to be used besides the "standard" ones.
